--- a/q00.psx/q00.psx.vcxproj.filters
+++ b/q00.psx/q00.psx.vcxproj.filters
@@ -30,13 +30,19 @@
     <ClCompile Include="utils.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="gpu.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="gpu.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
     <ClInclude Include="fileimport.h">
-      <Filter>Quelldateien</Filter>
+      <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="utils.h">
-      <Filter>Quelldateien</Filter>
+      <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
