--- a/q00.psx/q00.psx.vcxproj.filters
+++ b/q00.psx/q00.psx.vcxproj.filters
@@ -13,6 +13,12 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Quelldateien\imgui">
+      <UniqueIdentifier>{ca4d5a00-84fe-4fed-8d8c-4d2c8c172cde}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Headerdateien\imgui">
+      <UniqueIdentifier>{0842fca8-03db-49ea-9632-1d5f3feb1cf6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="q00.psx.cpp">
@@ -36,6 +42,30 @@
     <ClCompile Include="spu.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="ui.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="include\imgui-1.89.2\imgui.cpp">
+      <Filter>Quelldateien\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="include\imgui-1.89.2\imgui_draw.cpp">
+      <Filter>Quelldateien\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="include\imgui-1.89.2\imgui_tables.cpp">
+      <Filter>Quelldateien\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="include\imgui-1.89.2\imgui_widgets.cpp">
+      <Filter>Quelldateien\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="include\imgui-1.89.2\backends\imgui_impl_sdl.cpp">
+      <Filter>Quelldateien\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="include\imgui-1.89.2\backends\imgui_impl_sdlrenderer.cpp">
+      <Filter>Quelldateien\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="include\imgui-1.89.2\imgui_demo.cpp">
+      <Filter>Quelldateien\imgui</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gpu.h">
@@ -49,6 +79,33 @@
     </ClInclude>
     <ClInclude Include="spu.h">
       <Filter>Quelldateien</Filter>
+    </ClInclude>
+    <ClInclude Include="ui.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="include\imgui-1.89.2\imconfig.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="include\imgui-1.89.2\imstb_truetype.h">
+      <Filter>Headerdateien\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="include\imgui-1.89.2\imgui.h">
+      <Filter>Headerdateien\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="include\imgui-1.89.2\backends\imgui_impl_sdl.h">
+      <Filter>Headerdateien\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="include\imgui-1.89.2\backends\imgui_impl_sdlrenderer.h">
+      <Filter>Headerdateien\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="include\imgui-1.89.2\imgui_internal.h">
+      <Filter>Headerdateien\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="include\imgui-1.89.2\imstb_rectpack.h">
+      <Filter>Headerdateien\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="include\imgui-1.89.2\imstb_textedit.h">
+      <Filter>Headerdateien\imgui</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
