- imgui, adding cpu regs and cop regs

--- a/q00.psx/imgui.ini
+++ b/q00.psx/imgui.ini
@@ -1,20 +1,146 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=73,637
+Size=400,49
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=688,56
-Size=550,680
+Pos=470,166
+Size=714,654
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=60,37
-Size=495,405
+Pos=133,273
+Size=495,456
 Collapsed=0
 
 [Window][Another Window]
 Pos=544,49
 Size=198,71
 Collapsed=0
+
+[Window][,]
+Pos=3,7
+Size=412,151
+Collapsed=0
+
+[Window][q00.psx]
+Pos=220,205
+Size=251,150
+Collapsed=0
+
+[Window][About]
+Pos=669,21
+Size=570,512
+Collapsed=0
+
+[Window][CPU regs]
+Pos=-1,24
+Size=144,613
+Collapsed=0
+
+[Window][BottomBar]
+Pos=1,674
+Size=339,48
+Collapsed=0
+
+[Window][cpu regs]
+Pos=3,23
+Size=144,613
+Collapsed=1
+
+[Window][cop0]
+Pos=3,41
+Size=513,375
+Collapsed=0
+
+[Table][0x49F8DCEA,3]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=84
+Column 2  Width=126
+
+[Table][0x82CBB907,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49D11DC0,3]
+RefScale=13
+Column 0  Width=86
+Column 1  Width=86
+Column 2  Width=86
+
+[Table][0xDA36A7E0,6]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=70
+Column 2  Width=73
+Column 3  Width=68
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[Table][0x20DF7A63,4]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=70
+Column 2  Width=42
+Column 3  Weight=1.0000
+
+[Table][0xC9935533,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x64418101,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=136
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x47600645,3]
+RefScale=13
+Column 0  Width=89
+Column 1  Width=63
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0xE0773582,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x45A0E60D,7]
+RefScale=13
+Column 0  Width=49
+Column 1  Width=112
+Column 2  Width=112
+Column 3  Width=112
+Column 4  Width=112
+Column 5  Width=112
+Column 6  Width=112
+
+[Table][0xA43C3885,3]
+RefScale=13
+Column 0  Width=56
+Column 1  Width=56
+Column 2  Width=56
 
