--- a/q00.psx/q00.psx.vcxproj
+++ b/q00.psx/q00.psx.vcxproj
@@ -144,6 +144,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="cpu.cpp" />
+    <ClCompile Include="dma.cpp" />
     <ClCompile Include="fileimport.cpp" />
     <ClCompile Include="gpu.cpp" />
     <ClCompile Include="include\imgui-1.89.2\backends\imgui_impl_sdl.cpp" />
@@ -160,6 +161,7 @@
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="dma.h" />
     <ClInclude Include="fileimport.h" />
     <ClInclude Include="gpu.h" />
     <ClInclude Include="include\imgui-1.89.2\backends\imgui_impl_sdl.h" />
