- drawing more, more dma fixes, some ui

--- a/q00.psx/imgui.ini
+++ b/q00.psx/imgui.ini
@@ -4,7 +4,7 @@ Size=400,49
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=469,169
+Pos=321,419
 Size=714,654
 Collapsed=0
 
@@ -39,18 +39,23 @@ Size=144,613
 Collapsed=0
 
 [Window][BottomBar]
-Pos=1,674
+Pos=3,674
 Size=339,48
 Collapsed=0
 
 [Window][cpu regs]
-Pos=3,23
+Pos=1131,22
 Size=144,613
 Collapsed=0
 
 [Window][cop0]
 Pos=148,23
 Size=513,375
+Collapsed=0
+
+[Window][dump ram]
+Pos=1,22
+Size=115,77
 Collapsed=0
 
 [Table][0x49F8DCEA,3]
