- lots of stuff, fixed broken tri on intro (broken BLEZ, thx PSI <3)

--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ FodyWeavers.xsd
 /q00.psx/ramDump.txt
 /q00.psx/include/imgui-1.89.2
 /q00.psx/ramDump
+/enc_temp_folder/8896e888678ddb2deafdf15f1152945c/mmu.h
