- first texture implementation, sony logo showing (no clut yet)

--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,6 @@ FodyWeavers.xsd
 /q00.psx/include/imgui-1.89.2
 /q00.psx/ramDump
 /enc_temp_folder/8896e888678ddb2deafdf15f1152945c/mmu.h
+/q00.psx/RenderTexturePolygonCLUT4BPP.exe
+/q00.psx/RenderRectangle16BPP.exe
+/q00.psx/RenderPolygon16BPP.exe
